--- a/index.html
+++ b/index.html
@@ -1,11 +1,148 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html dir="rtl" lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div>fff</div>
-</body>
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Vazirmatn:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="logo">فلسطين</div>
+      <nav>
+        <a href="#">الرئيسية</a>
+        <a href="#">عن فلسطين</a>
+        <a href="#">المعالم</a>
+        <a href="#">تبرع</a>
+        <a href="#">تواصل معنا</a>
+      </nav>
+    </header>
+    <main>
+        
+      <section>
+        <h1>في القدس... حيث تبدأ الحكاية</h1>
+        <p>
+          في القدس ريح طفولة في الجو ريح براءة، فترى الحمام يطير يعلن دولة في"
+          "الريح بين رصاصتين
+        </p>
+      </section>
+
+      <section>
+        <div class="sec-2-txt">
+          <h2><span>المس</span>جد الأقصى - قلب القدس النابض</h2>
+          <p>
+            المسجد الأقصى هو أولى القبلتين وثالث الحرمين الشريفين، ويقع في قلب
+            مدينة القدس المحتلة تبلغ مساحته حوالي 144 دونما ويشمل عدة معالم
+            بارزة منها قبة الصخرة والمصلى القبلي والمصلى المرواني. يعتبر الأقصى
+            رمزا دينيا وتاريخيا وثقافيا للشعب الفلسطيني، ومكانا للمقاومة الروحية
+            والوطنية في وجه الاحتلال المستمر.
+          </p>
+        </div>
+        <img src="./imgs/pexels-haleyve-2102621.jpg" alt="" />
+      </section>
+
+      <section>
+        <h2>ساهم في مساعدة أهل غزة</h2>
+        <p>تبرعك يساهم في صمود العائلات والأطفال، وتخفيف ويلات</p>
+        <button>تبرع الآن</button>
+      </section>
+
+      <section>
+        <h2>منتجات المقاطعة</h2>
+
+        <div class="cards">
+
+          <div class="card">
+            <div class="img-card">
+
+              <img class="coc" src="./imgs/pexels-rohit-sharma-1230131-24860314.jpg" alt="" />
+            </div>
+            <button>مشروبات</button>
+            <h3>كوكا كولا</h3>
+            <p>شركة المشروبات العالمية التي تدعم الاحتلال .</p>
+            <button>مشاهدة التفاصيل</button>
+          </div>
+
+          <div class="card">
+            <div class="img-card">
+
+              <img class="coc" src="./imgs/pexels-samfi17-5186884.jpg" alt="" />
+            </div>
+            <button>مطاعم</button>
+            <h3>ماكدونالدز</h3>
+            <p>سلسلة مطاعم الوجبات السريعة التي تدعم الاحتلال</p>
+            <button>مشاهدة التفاصيل</button>
+          </div>
+
+          <div class="card">
+            <div class="img-card">
+
+              <img class="coc" src="./imgs/71E-K37BdsL._AC_SX695_.jpg" alt="" />
+            </div>
+            <button>ألبسة</button>
+            <h3>سكتشرز</h3>
+            <p>شركة أحذية معروفة وعالمية داعمة للكيان.</p>
+            <button>مشاهدة التفاصيل</button>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="crds-footr">
+        <div>
+          <h2>فلسطين</h2>
+          <p>موقع تعليمي للتعريف بفلسطين وقضيتها</p>
+        </div>
+
+        <div>
+          <h2>روابط سريعة</h2>
+          <nav>
+            <a href="#">الرئيسية</a>
+            <a href="#">عن فلسطين</a>
+            <a href="#">المعالم</a>
+            <a href="#">تبرع</a>
+            <a href="#">تواصل معنا</a>
+          </nav>
+        </div>
+
+        <div>
+          <h2>تواصل معنا</h2>
+
+          <div class="end">
+            <span>البريد الألكتروني:</span>
+            <a href="mailto:hussamroqaia4.1999@gmail.com"
+              >hussamroqaia4.1999@gmail.com</a
+            >
+          </div>
+
+          <div class="end">
+            <span>الهاتف:</span>
+            <a href="tel:+963936928788">+963936928788</a>
+          </div>
+
+          <div class="end aa">
+            <a href="">فيسبوك</a>
+            <a href="">تويتر</a>
+            <a href="">انستغرام</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- <hr> -->
+
+      <div class="footer-copyright">
+        <p>
+
+          حقوق النشر 2025 - جميع الحقوق محفوظة
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
