--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       </nav>
     </header>
     <main>
-        
       <section>
         <h1>في القدس... حيث تبدأ الحكاية</h1>
         <p>
@@ -57,11 +56,13 @@
         <h2>منتجات المقاطعة</h2>
 
         <div class="cards">
-
           <div class="card">
             <div class="img-card">
-
-              <img class="coc" src="./imgs/pexels-rohit-sharma-1230131-24860314.jpg" alt="" />
+              <img
+                class="coc"
+                src="./imgs/pexels-rohit-sharma-1230131-24860314.jpg"
+                alt=""
+              />
             </div>
             <button>مشروبات</button>
             <h3>كوكا كولا</h3>
@@ -71,7 +72,6 @@
 
           <div class="card">
             <div class="img-card">
-
               <img class="coc" src="./imgs/pexels-samfi17-5186884.jpg" alt="" />
             </div>
             <button>مطاعم</button>
@@ -82,13 +82,43 @@
 
           <div class="card">
             <div class="img-card">
-
               <img class="coc" src="./imgs/71E-K37BdsL._AC_SX695_.jpg" alt="" />
             </div>
             <button>ألبسة</button>
             <h3>سكتشرز</h3>
             <p>شركة أحذية معروفة وعالمية داعمة للكيان.</p>
             <button>مشاهدة التفاصيل</button>
+          </div>
+        </div>
+      </section>
+      <section class="donate">
+        <h2>ادعم قضيتنا</h2>
+        <div class="cards-donate">
+          <div class="card-donate one">
+            <h3>انضم إلينا</h3>
+            <p>
+              يقودنا أعضاؤنا الذين يضعون الحملات ويصوتون على أولوياتنا. نحن
+              أقوياء فقط لأننا نتكاتف - انضم إلينا
+            </p>
+            <button>انضم</button>
+          </div>
+          <div class="card-donate two">
+            <h3>تسوق</h3>
+            <p>
+              تفضلوا بزيارة متجرنا الإلكتروني لشراء القمصان والكوفيات
+              والإكسسوارات والعديد من المنتجات المتعلقة بفلسطين. جميع العائدات
+              تُخصص لتمويل حملاتنا المهمة.
+            </p>
+            <button>تسوق</button>
+          </div>
+          <div class="card-donate three">
+            <h3>تبرع</h3>
+            <p>
+              نعتمد على تبرعات داعمينا، والتي لولاها لما كنا موجودين. معًا،
+              نُطلق حملة شعبية لتحدي سياسات الحكومة، ومطالبة الشركات بالتوقف عن
+              التربح من الاحتلال الإسرائيلي غير الشرعي، ومحاسبة وسائل الإعلام.
+            </p>
+            <button>تبرع</button>
           </div>
         </div>
       </section>
@@ -138,10 +168,7 @@
       <!-- <hr> -->
 
       <div class="footer-copyright">
-        <p>
-
-          حقوق النشر 2025 - جميع الحقوق محفوظة
-        </p>
+        <p>حقوق النشر 2025 - جميع الحقوق محفوظة</p>
       </div>
     </footer>
   </body>
