--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="end">
             <span>البريد الألكتروني:</span>
             <a href="mailto:hussamroqaia4.1999@gmail.com"
-              >hussamroqaia4.1999@gmail.com</a
+              >hussamroqaia.1999@gmail.com</a
             >
           </div>
 
